--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@angular/animations": "^8.2.7",
     "@angular/cdk": "^8.2.0",
+    "@angular/cli": "~8.3.4",
     "@angular/common": "~8.2.5",
     "@angular/compiler": "~8.2.5",
+    "@angular/compiler-cli": "~8.2.5",
     "@angular/core": "~8.2.5",
     "@angular/forms": "~8.2.5",
     "@angular/material": "^8.2.0",
@@ -30,15 +32,14 @@
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "mdbootstrap": "^4.8.10",
+    "ngx-countdown": "^8.0.1",
     "ngx-order-pipe": "^2.0.4",
     "ngx-pagination": "^4.1.0",
-    "nodemailer": "^6.3.0",
+    "nodemailer": "^6.3.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "@angular/cli": "~8.3.4",
-    "@angular/compiler-cli": "~8.2.5",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.4",
