--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/compiler": "~8.2.5",
     "@angular/compiler-cli": "~8.2.5",
     "@angular/core": "~8.2.5",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.2.5",
     "@angular/material": "^8.2.0",
     "@angular/platform-browser": "~8.2.5",
@@ -29,7 +30,10 @@
     "animate.css": "^3.7.2",
     "body-parser": "^1.19.0",
     "chart.js": "^2.5.0",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "fastest-validator": "^0.6.18",
+    "firebase": "^7.2.1",
     "hammerjs": "^2.0.8",
     "mdbootstrap": "^4.8.10",
     "ngx-countdown": "^8.0.1",
@@ -39,6 +43,7 @@
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "typescript": "~3.5.3",
+    "uid-safe": "^2.1.5",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
