--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "angular-bootstrap-md": "^8.3.0",
     "animate.css": "^3.7.2",
     "body-parser": "^1.19.0",
-    "chart.js": "^2.5.0",
+    "chart.js": "^2.9.2",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "fastest-validator": "^0.6.18",
     "firebase": "^7.2.1",
     "hammerjs": "^2.0.8",
     "mdbootstrap": "^4.8.10",
+    "ng2-charts": "^2.3.0",
     "ngx-countdown": "^8.0.1",
     "ngx-order-pipe": "^2.0.4",
     "ngx-pagination": "^4.1.0",
